--- a/styles/style.css
+++ b/styles/style.css
@@ -53,3 +53,75 @@ h6{
      margin: 0 auto;
 }
 
+
+
+
+
+/*----Popus/overlay Styles----*/
+.flexContainer{
+    display:flex;
+    position: fixed;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    min-height: 90vh;
+    max-width: 25rem;
+    max-height: 600px;
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 1));
+
+}
+
+#overlay {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    pointer-events: none;
+}
+
+.containerItems{
+    padding: 2px 12px 2px 12px;
+    max-width: 25rem;
+    border: 3px solid #0056A6;
+    border-radius: 12px;
+    background-color: white;
+}
+
+#welcome {
+    text-align: center;
+    font-family: 'Bungee Hairline', cursive;
+
+}
+
+.instructions {
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+#instructionsList {
+    list-style-type: square;
+    margin-bottom: 30px;
+}
+
+#instructionsList li {
+    margin:0 0 16px 0; 
+}
+
+#exit {
+    margin: 25px;
+    border: 2px solid #0056A6;
+    border-radius: 12px;
+    background-color: white;
+    padding: 8px;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 1rem;  
+} 
