Created Favorit-render, favorite icon on creatnote, saveing the value of current favorit to localstorage...

--- a/styles/style.css
+++ b/styles/style.css
@@ -131,7 +131,12 @@ h6{
 svg input:checked  {
   fill:yellow;
 }
-
+.yellowStar  {
+  fill:yellow;
+  stroke:#C1C1C1;
+  stroke-linecap:round;
+  stroke-linejoin:round;
+}
 
 
 input[type="checkbox"]:checked + .my-image {
