--- a/styles/print.css
+++ b/styles/print.css
@@ -1,11 +1,11 @@
 @media print {
-    head, nav, #left, #info-text, label, input, button{
+    head, nav, #left, #info-text, label, input, button, svg{
         display:none;
     }
     @page{
         size: auto;
         page:cover;
-        margin-top: 15mm;
+        margin: 0mm;
         
     }
    
