--- a/styles/style.css
+++ b/styles/style.css
@@ -9,16 +9,18 @@
 main{
   display:flex;
   justify-content: flex-start;
-
   font-family:arial,sans-serif;
   font-size:100%;
-  margin:1em;
   color:black;
 }
 #note-title {
-  font-size: 1.5em;
-  border: none;
-  outline: none;
+  font-size: 1.5rem;
+padding: 5px;
+  width: 100%;
+  text-align: left;
+  border: 0;
+  outline: 0;
+  background: transparent;
 }
 
 #info-text {
@@ -112,9 +114,8 @@ h6{
 
 /* Left Div */
 #left {
-     margin: 0;
      width: 15%;
-     padding-right: 20px;
+     padding: 1em;
 }
 
 /* Right Div */
@@ -159,7 +160,7 @@ input[type="checkbox"] + .my-image {
      margin: 0 auto;
      min-width:5%;
      max-width: 750px;
-     padding-left: 20px;
+     padding-top: 33px;
      background-color: #ffffff;
 }
 #editor {
@@ -188,71 +189,89 @@ input[type="checkbox"] + .my-image {
 
 
 
-/*----Popus/overlay Styles----*/
+
+#searchbar {
+  display: block;
+  padding: 10px;
+  margin-left: auto;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-bottom: 10px;
+  width: 100%;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 1px solid black;
+}
+
+/*----Info Fönster och overlay---*/
 .flexContainer{
-    display:flex;
-    position: fixed;
-    z-index: 2;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    min-height: 90vh;
-    max-width: 25rem;
-    max-height: 600px;
-    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 1));
+  display:flex;
+  position: fixed;
+  z-index: 2;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-height: 90vh;
+  max-width: 25rem;
+  max-height: 600px;
+  filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 1));
 
 }
 
+/*----Popups/overlay Styles----*/
+
 #overlay {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    pointer-events: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  pointer-events: none;
 }
 
 .containerItems{
-    padding: 2px 12px 2px 12px;
-    max-width: 25rem;
-    border: 3px solid #0056A6;
-    border-radius: 12px;
-    background-color: white;
+  padding: 2px 12px 2px 12px;
+  max-width: 25rem;
+  border: 3px solid #0056A6;
+  border-radius: 12px;
+  background-color: white;
 }
 
 #welcome {
-    text-align: center;
-    font-family: 'Bungee Hairline', cursive;
+  text-align: center;
+  font-family: 'Bungee Hairline', cursive;
 
 }
 
 .instructions {
-    font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 #instructionsList {
-    list-style-type: square;
-    margin-bottom: 30px;
+  margin: 8px;
+  list-style-type: square;
+  margin-bottom: 30px;
 }
 
 #instructionsList li {
-    margin:0 0 16px 0; 
+  margin:0 0 16px 0; 
 }
 
 #exit {
-    margin: 25px;
-    border: 2px solid #0056A6;
-    border-radius: 12px;
-    background-color: white;
-    padding: 8px;
-    font-family: 'Noto Sans JP', sans-serif;
-    font-size: 1rem;  
-} 
+  margin: 25px;
+  border: 2px solid #0056A6;
+  border-radius: 12px;
+  background-color: white;
+  padding: 8px;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 1rem;  
+}
