--- a/styles/print.css
+++ b/styles/print.css
@@ -1,5 +1,5 @@
 @media print {
-    head, nav, #left, #info-text, label, input, button, svg{
+    head, nav, #left, #info-text, label, button, svg, #delete-btn, #text-templates{
         display:none;
     }
     @page{
