--- a/styles/style.css
+++ b/styles/style.css
@@ -53,13 +53,13 @@ h6{
 }
 
 
+
 .temp1 {
-  font-family: 'Nerko One', cursive;
+  font-family: Arial;
   color:black;
 }
 .temp1 > h2{
-  font-size: 2em;
-  color: rgb(75, 184, 148);
+  font-size: 1.5em;
 }
 .temp1 h3{
   font-size: 1.17em;
@@ -83,11 +83,12 @@ h6{
   font-size: 1em;
 }
 .temp3 {
-  font-family: 'Castoro', serif;
+  font-family: 'Nerko One', cursive;
   color:black;
 }
 .temp3 > h2{
-  font-size: 1.5em;
+  font-size: 2em;
+  color: rgb(75, 184, 148);
 }
 .temp3 h3{
   font-size: 1.17em;
@@ -95,6 +96,7 @@ h6{
 .temp3 h4{
   font-size: 1em;
 }
+
 .temp4 {
   font-family: 'Indie Flower', cursive;
   color:black;
@@ -190,7 +192,7 @@ input[type="checkbox"] + .my-image {
 
 
 
-#searchbar {
+.searchbar {
   display: block;
   padding: 10px;
   margin-left: auto;
